@@ -1,3 +1,9 @@
+2002-10-06  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* tests/multi_lo_select.c: Need the io_fileio.h header file
+	* tests/tcp_echo.c: (max): definition clashes with the one in
+	the header file lib/libkern/libkern.h
+
 2002-08-16  Gary Thomas  <gthomas@ecoscentric.com> (on behalf of)
 2002-08-16  Louis Hamilton <hamilton@redhat.com>	
 
